feat: FTS5 message search
